src/objects/AvailableService__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Available Services</relationshipLabel>
        <relationshipName>Available_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type</label>
        <referenceTo>ServiceType__c</referenceTo>
        <relationshipLabel>Available Services</relationshipLabel>
        <relationshipName>AvailableServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplyPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supply Point</label>
        <referenceTo>SupplyPoint__c</referenceTo>
        <relationshipLabel>Available Services</relationshipLabel>
        <relationshipName>AvailableServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesalers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesalers</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipLabel>Available Services</relationshipLabel>
        <relationshipName>Available_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Available Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Available Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>